Updated CNN and Prediction endpoints. Lots of work left for improving models. Updated swagger docs for endpoint changes.
